# sharpneat-runner-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
benches/: activation_bench.rs  neuralnet_bench.rs
sample_genomes/: cf-acyclic.net  cf-cyclic.net
src/: activation.rs  builder.rs  graph.rs  io.rs  lib.rs  net.rs
src/activation/: functions.rs  vectorized.rs
src/graph/: acyclic.rs
src/io/: model.rs  reader.rs  writer.rs
src/net/: acyclic.rs  cyclic.rs
tests/: integration.rs
tests/fixtures/: example1.net  example2.net  example3.net
